--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts-ts": "3.1.0",
+    "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -30,6 +31,7 @@
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/redux-form": "^8.1.4",
     "typescript": "^3.5.1"
   }
 }
